--- a/Numpy[01].ipynb
+++ b/Numpy[01].ipynb
@@ -186,7 +186,7 @@
     }
    ],
    "source": [
-    "# for/ list comprehension 사용하지 않고 빠르게 연산수행 -> type : list\n",
+    "# for / list comprehension 사용하지 않고 빠르게 연산수행 -> type : list\n",
     "# type : ndarray\n",
     "x = np.array(data)\n",
     "x * 2\n",
@@ -202,13 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[21 42 63]\n",
+      "[21 42 63]\n",
       "[21 42 63]\n"
      ]
     }
@@ -216,8 +218,10 @@
    "source": [
     "oneAry = np.array([1,2,3])\n",
     "twoAry = np.array([10,20,30])\n",
-    "# 괄호로 묶어도 결과 달라지지 않음 / 궁금) 연산자에 우선순위가 존재하지 않는가?\n",
-    "print(oneAry + twoAry *2)"
+    "# 괄호로 묶어도 결과 달라지지 않음 / 왜?\n",
+    "print(oneAry + twoAry *2)\n",
+    "print(oneAry + (twoAry*2))\n",
+    "print(2 * twoAry + oneAry)"
    ]
   },
   {
@@ -389,12 +393,13 @@
     }
    ],
    "source": [
+    "# 깊이 : 2, 행 : 3, 열 : 4\n",
     "print(len(threeDimAry),len(threeDimAry[0]),len(threeDimAry[0][0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +409,8 @@
       "array ['100' 'hello' '3.14']\n",
       "type <class 'numpy.ndarray'>\n",
       "x.dtype <U11\n",
-      "x[0] type <class 'numpy.str_'>\n"
+      "x[0] type <class 'numpy.str_'>\n",
+      "100\n"
      ]
     }
    ],
@@ -434,6 +440,8 @@
     }
    ],
    "source": [
+    "# ndim : 배열의 차원\n",
+    "# shape : 배열의 크기\n",
     "data = np.array([0,1,2,3,4,5])\n",
     "aryInfo(data)"
    ]
@@ -539,15 +547,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# 슬라이싱\n",
-    "# 첫번째 행의 전체\n",
-    "# 두번째 열의 전체\n",
-    "# 두번째 행의 두번째 열부터 끝열까지"
+    "- 슬라이싱\n",
+    "- 첫번째 행의 전체\n",
+    "- 두번째 열의 전체\n",
+    "- 두번째 행의 두번째 열부터 끝열까지"
    ]
   },
   {
@@ -567,13 +573,13 @@
    ],
    "source": [
     "print(matrix[0:1])\n",
-    "print(matrix[:,1])\n",
-    "print(matrix[1,1:])"
+    "print(matrix[:,1]) \n",
+    "print(matrix[1,1:]) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -595,6 +601,8 @@
       "14\n",
       "[6 7]\n",
       "[ 7 12]\n",
+      "[[3 4]\n",
+      " [8 9]]\n",
       "[[3 4]\n",
       " [8 9]]\n"
      ]
@@ -610,7 +618,8 @@
     "# 배열 [7,12]을 슬라이싱하라\n",
     "print(m[1:,2])\n",
     "# 배열 [[3,4],[8,9]]를 슬라이싱하라\n",
-    "print(m[:2,-2:])"
+    "print(m[:2,-2:])\n",
+    "print(m[:2,3:])"
    ]
   },
   {
@@ -653,6 +662,7 @@
     }
    ],
    "source": [
+    "# true만 출력\n",
     "odd_even[idx]"
    ]
   },
@@ -674,6 +684,7 @@
     }
    ],
    "source": [
+    "# return : bool\n",
     "odd_even % 2 == 0"
    ]
   },
@@ -694,6 +705,7 @@
     }
    ],
    "source": [
+    "# return : value\n",
     "odd_even[odd_even % 2 == 0]"
    ]
   },
@@ -783,6 +795,7 @@
     }
    ],
    "source": [
+    "# 첫번째와 네번째 열만 출력\n",
     "n_dim_ary[:,[0,3]]"
    ]
   },
@@ -828,6 +841,7 @@
     }
    ],
    "source": [
+    "# 순서 다르게 출력\n",
     "n_dim_ary[[2,0,1],:]"
    ]
   },
@@ -886,13 +900,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "type : <class 'numpy.ndarray'>\n",
+      "shape : (12,), dimension : 1, dtype : int32\n",
+      "Array's Data : \n",
+      " [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
       "type : <class 'numpy.ndarray'>\n",
       "shape : (3, 4), dimension : 2, dtype : int32\n",
       "Array's Data : \n",
@@ -903,6 +921,9 @@
     }
    ],
    "source": [
+    "ary = np.arange(0,12,1)\n",
+    "aryInfo(ary)\n",
+    "# reshape : 배열의 크기 변형\n",
     "ary = np.arange(0,12,1).reshape(3,4)\n",
     "aryInfo(ary)"
    ]
@@ -931,7 +952,6 @@
     "print(ary[1,2],type(ary[1,2]))\n",
     "print(ary[1:2,2],type(ary[1:2,2]))\n",
     "print(ary[1:2,1:2],type(ary[1,2:1:2]))\n",
-    "\n",
     "print(ary[:,[0,2]],type(ary[:,[0,2]]))"
    ]
   },
@@ -965,8 +985,8 @@
     }
    ],
    "source": [
-    "aryInfo(ary[[0,2],2])\n",
-    "aryInfo(ary[[0,2],2:3])"
+    "aryInfo(ary[[0,2],2]) # 벡터\n",
+    "aryInfo(ary[[0,2],2:3]) # 행렬"
    ]
   },
   {
@@ -1232,6 +1252,7 @@
     }
    ],
    "source": [
+    "# 크기를 튜플로 명시하지 않고 다른 배열과 같은 크기의 배열을 생성할 때\n",
     "zl = np.zeros_like(z,dtype='f')\n",
     "aryInfo(zl)"
    ]
@@ -1346,6 +1367,7 @@
    ],
    "source": [
     "# 구간 나누기\n",
+    "# 시작, 끝(포함), 개수\n",
     "np.linspace(0,100,5)"
    ]
   },
@@ -1359,7 +1381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1381,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1404,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1451,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1473,7 +1495,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1574,7 +1598,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 행렬을 벡터로 변형한다면 (flatten())"
+    "- 행렬을 벡터로 변형한다면 (flatten())\n",
+    "- 다차원 배열 -> 1차원 배열"
    ]
   },
   {
@@ -1615,6 +1640,8 @@
    ],
    "source": [
     "# reshape(변경) 시 주의\n",
+    "# 출력결과는 동일하지만 형태는 다름\n",
+    "# 1차원 vs 다차원\n",
     "x = np.arange(5)\n",
     "aryInfo(x)"
    ]
@@ -1670,7 +1697,8 @@
    "metadata": {},
    "source": [
     "### 1차원 혹은 2차원 데이터에 대한 roop 작업가능\n",
-    "- ndarray iterator - nditer()"
+    "- ndarray iterator - nditer()\n",
+    "- 공부 필요!"
    ]
   },
   {
@@ -1693,18 +1721,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 1 2 3 4 "
+      "0 1 2 3 4 5 6 7 8 9 10 11 "
      ]
     }
    ],
    "source": [
+    "# c_index : 1차원 배열에 대한 nditer()\n",
     "ite = np.nditer(x, flags=['c_index'])\n",
     "while not ite.finished :\n",
     "    print(x[ite.index],end=\" \")\n",
@@ -1713,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1736,14 +1765,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
+      "2 <class 'int'>\n",
       "3\n",
       "1 2 3 \n",
       "\n",
@@ -1754,7 +1783,8 @@
    ],
    "source": [
     "# 2차원 배열에 대한 순차적 접근\n",
-    "print(two_dim_ary.shape[0]) # row\n",
+    "# 2행 3열\n",
+    "print(two_dim_ary.shape[0],type(two_dim_ary.shape[0])) # row\n",
     "print(two_dim_ary.shape[1]) # col\n",
     "\n",
     "for i in range(two_dim_ary.shape[0]) :\n",
@@ -1765,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1782,18 +1812,12 @@
     }
    ],
    "source": [
+    "# c_index : 2차원 배열에 대한 nditer()\n",
     "ite = np.nditer(two_dim_ary, flags=['multi_index'])\n",
     "while not ite.finished :\n",
     "    print(two_dim_ary[ite.multi_index],end=\"\\n\")\n",
     "    ite.iternext()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
