Add iris_classification_ml[01] file about classification

--- a/iris_classification_ml[01]ipynb.ipynb
+++ b/iris_classification_ml[01]ipynb.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "iris_classification_ml[01]ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO9vhBAGA/GQH6McquRM0bH",
+      "authorship_tag": "ABX9TyP8HbvsL6ThuqNnNM64Kpb+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1134,7 +1134,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3laNq6BuF90r",
-        "outputId": "74f39e1f-1df3-42c2-fd05-9d3aef4e6793"
+        "outputId": "c6a7a574-5b11-422a-929e-f80de60513b5"
       },
       "source": [
         "features = fold_iris.data\r\n",
@@ -1143,7 +1143,7 @@
         "fold_df_clf = DecisionTreeClassifier()\r\n",
         "fold_df_clf"
       ],
-      "execution_count": 35,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,7 +1160,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 51
         }
       ]
     },
@@ -1422,11 +1422,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 461
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ZoVw18lmWEhV",
-        "outputId": "e8721531-d973-4ba9-de3a-f969b6149909"
+        "outputId": "64f021c8-0679-42cb-f069-9d43a8db1749"
       },
       "source": [
         "# 교차검증 정확도 확인\r\n",
@@ -1439,36 +1438,52 @@
         "n_iter = 0\r\n",
         "cv_accuracy = []\r\n",
         "\r\n",
-        "for train_idx, test_idx in skf.split(fold_iris.features, fold_iris.label) :\r\n",
-        "    X_train, X_val = fold_iris.features[train_idx], fold_iris.features[test_idx]"
+        "for train_idx, test_idx in skf.split(features,label) :\r\n",
+        "    X_train, X_val = features[train_idx], features[test_idx]\r\n",
+        "    y_train, y_val = label[train_idx], label[test_idx]\r\n",
+        "\r\n",
+        "    # 학습, 예측\r\n",
+        "    dt_clf.fit(X_train, y_train)\r\n",
+        "    pred = dt_clf.predict(X_val)\r\n",
+        "\r\n",
+        "    # 반복 시 정확도 측정\r\n",
+        "    n_iter += 1\r\n",
+        "    acc = np.round(accuracy_score(y_val, pred),4)\r\n",
+        "    print('{} 교차검증 정확도 : {}, 학습 데이터 크기 : {}, 검증 데이터 크기 : {}'.format(n_iter, acc, X_train.shape[0], X_val.shape[0]))  \r\n",
+        "    print('{} 검증셋 인덱스 : {}'.format(n_iter, X_val.shape[0]))\r\n",
+        "\r\n",
+        "    cv_accuracy.append(acc)\r\n",
+        "\r\n",
+        "print()\r\n",
+        "print('교차 검증 정확도', np.round(cv_accuracy,4) )\r\n",
+        "print('평균 검증 정확도', np.mean(cv_accuracy))\r\n"
       ],
-      "execution_count": 49,
+      "execution_count": 58,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/utils/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    113\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 114\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    115\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'features'",
-            "\nDuring handling of the above exception, another exception occurred:\n",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-49-b0070fa81b36>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mcv_accuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mtrain_idx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_idx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mskf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfold_iris\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfold_iris\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfold_iris\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtrain_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfold_iris\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest_idx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/utils/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    114\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 116\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    117\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__setstate__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: features"
-          ]
+          "output_type": "stream",
+          "text": [
+            "1 교차검증 정확도 : 0.98, 학습 데이터 크기 : 100, 검증 데이터 크기 : 50\n",
+            "1 검증셋 인덱스 : 50\n",
+            "2 교차검증 정확도 : 0.92, 학습 데이터 크기 : 100, 검증 데이터 크기 : 50\n",
+            "2 검증셋 인덱스 : 50\n",
+            "3 교차검증 정확도 : 0.96, 학습 데이터 크기 : 100, 검증 데이터 크기 : 50\n",
+            "3 검증셋 인덱스 : 50\n",
+            "\n",
+            "교차 검증 정확도 [0.98 0.92 0.96]\n",
+            "평균 검증 정확도 0.9533333333333333\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WRoaWHyWZAJH"
+        "id": "aviBhTeFh4fc"
       },
       "source": [
-        ""
+        "    "
       ],
       "execution_count": null,
       "outputs": []
